[project]
name = "agents-under-the-hood"
version = "0.1.0"
description = "Demonstration of ReAct from highlevel abstraction to lower level function and prompt implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.0",
    "python-dotenv>=1.2.2",
]
