[project]
name = "travel-infor-agents-app"
version = "0.1.0"
description = "multi-tool travel information agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastmcp>=3.2.4",
    "html2text>=2025.4.15",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-supervisor>=0.0.31",
    "lxml>=6.1.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
